Project Rekber {
    database_type: 'MySql',
}

Table users {
    id varchar [pk, increment]
    first_name varchar [not null]
    last_name varchar [not null]
    email varchar [not null, unique]
    phone varchar [not null, unique]
    address text [not null]
    country_id int
    state_id int
    city_id int
    postalcode int
    email_otp tinyint
    phone_otp tinyint
    total_saldo longtext [note: 'json type with format: {_type_: _saldo, _type_: _saldo_}']
    email_verified_at timestamp
    phone_verified_at timestamp
    kyc_verified_at timestamp
    status tinyint [note: '1 for active, 2 for banned, 3 for unactive']
    last_login_at timestamp
    created_at timestamp
    updated_at timestamp
}

Table user_saldo {
    id varchar [pk, increment]
    user_id varchar [ref: > users.id]
    debit double [not null]
    credit double [not null]
    note text
    type tinyint [note: '1 for PPOB, 2 for rekber']
    created_at timestamp
    updated_at timestamp
}

Table user_login_histories {
    id varchar [pk, increment]
    user_id varchar [ref: > users.id]
    login_at timestamp [not null]
}

Table categories {
    id varchar [pk, increment]
    name varchar [not null]
    status boolean [not null, default: true]
    created_at timestamp
    updated_at timestamp
}

Table settings {
    id varchar [pk, increment]
    type tinyint [note: '1 for general setting, 2 for system config, 3 for logo']
    key varchar
    value varchar
    description text
    created_at timestamp
    updated_at timestamp
}

Table Wallets {
    id bigint [pk, increment]
    holder_type varchar [not null, note: 'Will be filled with model class value or other']
    holder_id char [not null, note: 'Related to users id']
    name varchar [not null]
    slug varchar [not null]
    uuid char [not null]
    description varchar
    balance double [note: 'decimal 64,0', default: '0']
    created_at timestamp
    updated_at timestamp
}

Table transactions {
    uuid char [not null, unique, increment]
    payable_type varchar [not null]
    payable_id char [not null, note: 'Related to user id']
    wallet_id bigint [not null]
    type enum [note: 'withdraw, deposit, debit, credit, escrow']
    amount double [note: 'decimal 64,0']
    confirmed boolean
    created_at timestamp
    updated_at timestamp
}

Table payment_gateaway_settings {
    uuid char [not null, unique, increment]
    type enum [note: 'manual and automatic']
    name varchar [not null]
    configuration longtext
}

Table payment_gateaway_details {
    uuid char [not null, unique, increment]
    payment_gateaway_setting_id char [not null]
    currency varchar [not null]
    symbol char
    rate double [note: 'decimal 64,0']
    minimum_trx double [note: 'decimal 64,0']
    maximum_trx double [note: 'decimal 64,0']
    fixed_charge double [note: 'decimal 64,0']
    percent_charge tinyint
    deposit_instruction text
    user_field longtext
    created_at timestamp
    updated_at timestamp
}

Table deposits {
    uuid char [not null, unique, increment]
    trx_id char [not null, unique]
    user_id char [not null, ref: > users.id]
    amount double [note: 'decimal 64,0']
    payment_gateaway_id char
    automatic_channel varchar [note: 'This column is only for automatic payment']
    status tinyint [note: '1 for paid, 2 for pending, 3 for failed']
    field_value longtext
    created_at timestamp
    updated_at timestamp
}
